minor style fixes to the spacing of components

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -29,7 +29,9 @@
 }
 
 .nav-row .col-md-6 {
-  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* style content boxes */
@@ -41,6 +43,7 @@
   color: white;
   position: relative;
   height: 30rem;
+  transition: all 0.4s ease-in-out;
 }
 
 .heading h1 {
@@ -97,7 +100,7 @@
 
 .comment-section {
   justify-content: center;
-  margin: -2rem 0 1rem 0;
+  margin: -3.5rem 0 1rem 0;
 }
 
 .comment-section .card {
@@ -114,6 +117,10 @@
   font-style: italic;
 }
 
+.comments-title {
+  margin-bottom: 1.5rem;
+}
+
 @media only screen and (max-width: 767px) {
   .logo {
     margin-bottom: 0.5rem;
@@ -121,6 +128,10 @@
 
   .comment-section {
     justify-content: center;
-    margin-top: -3rem;
+    margin-top: -4.5rem;
+  }
+
+  .heading {
+    height: 27rem;
   }
 }
